chore: refactor and clean up

--- a/src/app/legal-notice/legal-notice.component.html
+++ b/src/app/legal-notice/legal-notice.component.html
@@ -1,6 +1,6 @@
 <section>
     <div class="container">
-        <div *ngIf="isEnglish()">
+        <div *ngIf="isEnglish">
             <h1>Legal Notice</h1>
             <p>
                 <b>Responsible entity:</b>
@@ -29,7 +29,7 @@
                     href='https://brainbox.swiss/'>BrainBox Solutions</a>
             </p>
         </div>
-        <div *ngIf="!isEnglish()">
+        <div *ngIf="!isEnglish">
             <h1>Impressum</h1>
             <p>
                 <b>Verantwortliche Person:</b>
