--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -1,12 +1,12 @@
 <section>
     <div class="container">
-        <h2 data-aos="fade-right">{{ isEnglish() ? translations.english.title : translations.german.title }}</h2>
+        <h2 data-aos="fade-right">{{ isEnglish ? translations.english.title : translations.german.title }}</h2>
         <div class="contact-container">
             <div class="info-container">
-                <div class="info-subheading" data-aos="fade-right">{{ isEnglish() ? translations.english.subtitle : translations.german.subtitle }}</div>
-                <p data-aos="fade-right">{{ isEnglish() ? translations.english.description : translations.german.description }}</p>
-                <div class="info-cta" data-aos="fade-right">{{ isEnglish() ? translations.english.q : translations.german.q }}
-                    <span>{{ isEnglish() ? translations.english.a : translations.german.a }}</span>
+                <div class="info-subheading" data-aos="fade-right">{{ isEnglish ? translations.english.subtitle : translations.german.subtitle }}</div>
+                <p data-aos="fade-right">{{ isEnglish ? translations.english.description : translations.german.description }}</p>
+                <div class="info-cta" data-aos="fade-right">{{ isEnglish ? translations.english.q : translations.german.q }}
+                    <span>{{ isEnglish ? translations.english.a : translations.german.a }}</span>
                 </div>
                 <img class="ellipse-1" src="./assets/img/ellipse.svg" alt="ellipse" draggable="false">
             </div>
