--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -1,6 +1,6 @@
 <section>
     <div class="container">
-        <div *ngIf="isEnglish()">
+        <div *ngIf="isEnglish">
             <h1>Privacy Policy</h1>
             <p>Last updated on: 26.01.2024</p><br>
             <p>Transparent handling of personal data is very important to us. This data protection statement provides
@@ -183,7 +183,7 @@
             privacy
             policy. No personal data is collected or processed in the process.
         </div>
-        <div *ngIf="!isEnglish()">
+        <div *ngIf="!isEnglish">
             <h1>Datenschutzerklärung</h1>
             <p>Zuletzt aktualisiert am: 26.01.2024</p><br>
             <p>Der transparente Umgang mit personenbezogenen Daten ist uns sehr wichtig. Diese Datenschutzerklärung gibt
