--- a/src/app/main-content/skill-set/skill-set.component.html
+++ b/src/app/main-content/skill-set/skill-set.component.html
@@ -1,6 +1,6 @@
 <section>
     <div class="container">
-        <h2 data-aos="zoom-in">{{ isEnglish() ? translations.english.title : translations.german.title }}</h2>
+        <h2 data-aos="zoom-in">{{ isEnglish ? translations.english.title : translations.german.title }}</h2>
         <div class="icons" data-aos="zoom-in">
             <div class="icons-top">
                 <ng-container *ngFor="let skill of skills, let i = index">
